--- a/src/main/webapp/pages/DevFormDataEntry/DevFormDataEntry.html
+++ b/src/main/webapp/pages/DevFormDataEntry/DevFormDataEntry.html
@@ -7,12 +7,13 @@
             <wm-tabs name="tabs1">
                 <wm-tabpane name="tabpane6" title="MasterForms">
                     <wm-livegrid formlayout="dialog" name="livegrid7">
-                        <wm-grid gridfirstrowselect="true" editmode="dialog" title="Masterforms List" dataset="bind:Variables.Cx2MasterFormsData.dataSet" navigation="Classic" name="grid7" filtermode="multicolumn" exportformat="EXCEL">
+                        <wm-grid gridfirstrowselect="true" editmode="dialog" title="Masterforms List" dataset="bind:Variables.Cx2MasterFormsData.dataSet" navigation="Classic" name="grid7">
                             <wm-grid-column binding="formGuid" caption="Form Guid" type="string" primary-key="true" generator="assigned" show="true" readonly="false"></wm-grid-column>
                             <wm-grid-column binding="closed" caption="Closed" type="boolean" generator="assigned" show="true" readonly="false"></wm-grid-column>
                             <wm-grid-column binding="formTitle" caption="Form Title" type="string" generator="assigned" show="true" readonly="false"></wm-grid-column>
                             <wm-grid-column binding="formTypes.formType" caption="Form Type" type="string" generator="assigned" readonly="true" show="true" related-entity-name="FormTypes"></wm-grid-column>
                             <wm-grid-column binding="formStatuses.status" caption="Statuses Status" type="string" generator="assigned" readonly="true" show="true" related-entity-name="FormStatuses"></wm-grid-column>
+                            <wm-grid-column binding="municipalityGroups.groupName" caption="Group Name" type="string" generator="assigned" readonly="true" show="true" related-entity-name="MunicipalityGroups"></wm-grid-column>
                             <wm-grid-column binding="municipalities.municipalityName" caption="Municipality Name" type="string" generator="assigned" readonly="true" show="true" related-entity-name="Municipalities"></wm-grid-column>
                             <wm-grid-column binding="users.email" caption="Users Email" type="string" generator="assigned" readonly="true" show="true" related-entity-name="Users"></wm-grid-column>
                             <wm-grid-column binding="vendor.companyName" caption="Company Name" type="string" generator="assigned" readonly="true" show="true" related-entity-name="Vendor"></wm-grid-column>
@@ -25,67 +26,73 @@
                             <wm-layoutgrid columns="3" name="layoutgrid7">
                                 <wm-gridrow name="gridrow26">
                                     <wm-gridcolumn columnwidth="4" name="gridcolumn76">
-                                        <wm-form-field name="formGuid" displayname="Form Guid" show="true" primary-key="true" generator="assigned" key="formGuid" type="string" required="required" widget="text" maxchars="255" inputtype="text" placeholder="Enter value"></wm-form-field>
+                                        <wm-form-field name="formGuid" displayname="Form Guid" required="true" show="true" generator="assigned" primary-key="true" key="formGuid" type="string" is-related="false" maxchars="255" pc-display="true" mobile-display="true"
+                                        widget="text"></wm-form-field>
                                     </wm-gridcolumn>
                                     <wm-gridcolumn columnwidth="4" name="gridcolumn77">
-                                        <wm-form-field name="closed" displayname="Closed" show="true" primary-key="false" generator="assigned" key="closed" type="boolean" widget="checkbox" placeholder=""></wm-form-field>
+                                        <wm-form-field name="closed" displayname="Closed" required="false" show="true" generator="assigned" primary-key="false" key="closed" type="boolean" is-related="false" pc-display="true" mobile-display="true" widget="checkbox"></wm-form-field>
                                     </wm-gridcolumn>
                                     <wm-gridcolumn columnwidth="4" name="gridcolumn78">
-                                        <wm-form-field name="totalFees" displayname="Total Fees" show="true" primary-key="false" generator="assigned" key="totalFees" type="string" widget="text" maxchars="255" inputtype="text" placeholder="Enter value"></wm-form-field>
+                                        <wm-form-field name="totalFees" displayname="Total Fees" required="false" show="true" generator="assigned" primary-key="false" key="totalFees" type="string" is-related="false" maxchars="255" pc-display="true" mobile-display="true"
+                                        widget="text"></wm-form-field>
                                     </wm-gridcolumn>
                                 </wm-gridrow>
                                 <wm-gridrow name="gridrow27">
                                     <wm-gridcolumn columnwidth="4" name="gridcolumn79">
-                                        <wm-form-field name="totalPayment" displayname="Total Payment" show="true" primary-key="false" generator="assigned" key="totalPayment" type="string" widget="text" maxchars="255" inputtype="text" placeholder="Enter value"></wm-form-field>
+                                        <wm-form-field name="totalPayment" displayname="Total Payment" required="false" show="true" generator="assigned" primary-key="false" key="totalPayment" type="string" is-related="false" maxchars="255" pc-display="true"
+                                        mobile-display="true" widget="text"></wm-form-field>
                                     </wm-gridcolumn>
                                     <wm-gridcolumn columnwidth="4" name="gridcolumn80">
-                                        <wm-form-field name="balanceDue" displayname="Balance Due" show="true" primary-key="false" generator="assigned" key="balanceDue" type="string" widget="text" maxchars="255" inputtype="text" placeholder="Enter value"></wm-form-field>
+                                        <wm-form-field name="balanceDue" displayname="Balance Due" required="false" show="true" generator="assigned" primary-key="false" key="balanceDue" type="string" is-related="false" maxchars="255" pc-display="true" mobile-display="true"
+                                        widget="text"></wm-form-field>
                                     </wm-gridcolumn>
                                     <wm-gridcolumn columnwidth="4" name="gridcolumn81">
-                                        <wm-form-field name="recordType" displayname="Record Type" show="true" primary-key="false" generator="assigned" key="recordType" type="string" widget="text" maxchars="255" inputtype="text" placeholder="Enter value"></wm-form-field>
+                                        <wm-form-field name="recordType" displayname="Record Type" required="false" show="true" generator="assigned" primary-key="false" key="recordType" type="string" is-related="false" maxchars="255" pc-display="true" mobile-display="true"
+                                        widget="text"></wm-form-field>
                                     </wm-gridcolumn>
                                 </wm-gridrow>
                                 <wm-gridrow name="gridrow28">
                                     <wm-gridcolumn columnwidth="4" name="gridcolumn82">
-                                        <wm-form-field name="issuedDate" displayname="Issued Date" show="true" primary-key="false" generator="assigned" key="issuedDate" type="date" widget="date" placeholder="Select date" outputformat="yyyy-MM-dd"></wm-form-field>
+                                        <wm-form-field name="issuedDate" displayname="Issued Date" required="false" show="true" generator="assigned" primary-key="false" key="issuedDate" type="date" is-related="false" pc-display="true" mobile-display="true"
+                                        widget="date"></wm-form-field>
                                     </wm-gridcolumn>
                                     <wm-gridcolumn columnwidth="4" name="gridcolumn83">
-                                        <wm-form-field name="expiresDate" displayname="Expires Date" show="true" primary-key="false" generator="assigned" key="expiresDate" type="date" widget="date" placeholder="Select date" outputformat="yyyy-MM-dd"></wm-form-field>
+                                        <wm-form-field name="expiresDate" displayname="Expires Date" required="false" show="true" generator="assigned" primary-key="false" key="expiresDate" type="date" is-related="false" pc-display="true" mobile-display="true"
+                                        widget="date"></wm-form-field>
                                     </wm-gridcolumn>
                                     <wm-gridcolumn columnwidth="4" name="gridcolumn84">
-                                        <wm-form-field name="formTitle" displayname="Form Title" show="true" primary-key="false" generator="assigned" key="formTitle" type="string" widget="text" maxchars="255" inputtype="text" placeholder="Enter value"></wm-form-field>
+                                        <wm-form-field name="formTitle" displayname="Form Title" required="false" show="true" generator="assigned" primary-key="false" key="formTitle" type="string" is-related="false" maxchars="255" pc-display="true" mobile-display="true"
+                                        widget="text"></wm-form-field>
                                     </wm-gridcolumn>
                                 </wm-gridrow>
                                 <wm-gridrow name="gridrow29">
                                     <wm-gridcolumn columnwidth="4" name="gridcolumn85">
-                                        <wm-form-field name="formTypes" displayname="Form Types" show="true" primary-key="false" generator="assigned" key="formTypes" type="list" is-related="true" widget="select" placeholder="Select value" orderby="formType:asc"
-                                        displayexpression="formType"></wm-form-field>
+                                        <wm-form-field name="formTypes" displayname="Form Types" required="false" show="true" generator="assigned" primary-key="false" key="formTypes" type="list" is-related="true" pc-display="true" mobile-display="true" widget="select"></wm-form-field>
                                     </wm-gridcolumn>
                                     <wm-gridcolumn columnwidth="4" name="gridcolumn86">
-                                        <wm-form-field name="formStatuses" displayname="Form Statuses" show="true" primary-key="false" generator="assigned" key="formStatuses" type="list" is-related="true" widget="select" placeholder="Select value" orderby="status:asc"
-                                        displayexpression="status"></wm-form-field>
+                                        <wm-form-field name="formStatuses" displayname="Form Statuses" required="false" show="true" generator="assigned" primary-key="false" key="formStatuses" type="list" is-related="true" pc-display="true" mobile-display="true"
+                                        widget="select"></wm-form-field>
                                     </wm-gridcolumn>
                                     <wm-gridcolumn columnwidth="4" name="gridcolumn87">
-                                        <wm-form-field name="municipalityGroups" displayname="Municipality Groups" show="true" primary-key="false" generator="assigned" key="municipalityGroups" type="list" is-related="true" widget="select" placeholder="Select value"
-                                        orderby="groupName:asc" displayexpression="groupName"></wm-form-field>
+                                        <wm-form-field name="municipalityGroups" displayname="Municipality Groups" required="false" show="true" generator="assigned" primary-key="false" key="municipalityGroups" type="list" is-related="true" pc-display="true"
+                                        mobile-display="true" widget="select"></wm-form-field>
                                     </wm-gridcolumn>
                                 </wm-gridrow>
                                 <wm-gridrow name="gridrow30">
                                     <wm-gridcolumn columnwidth="4" name="gridcolumn88">
-                                        <wm-form-field name="municipalities" displayname="Municipalities" show="true" primary-key="false" generator="assigned" key="municipalities" type="list" is-related="true" widget="select" placeholder="Select value" orderby="municipalityName:asc"
-                                        displayexpression="municipalityName"></wm-form-field>
+                                        <wm-form-field name="municipalities" displayname="Municipalities" required="false" show="true" generator="assigned" primary-key="false" key="municipalities" type="list" is-related="true" pc-display="true" mobile-display="true"
+                                        widget="select"></wm-form-field>
                                     </wm-gridcolumn>
                                     <wm-gridcolumn columnwidth="4" name="gridcolumn89">
-                                        <wm-form-field name="users" displayname="Users" show="true" primary-key="false" generator="assigned" key="users" type="list" is-related="true" widget="select" placeholder="Select value" orderby="email:asc" displayexpression="email"></wm-form-field>
+                                        <wm-form-field name="users" displayname="Users" required="false" show="true" generator="assigned" primary-key="false" key="users" type="list" is-related="true" pc-display="true" mobile-display="true" widget="select"></wm-form-field>
                                     </wm-gridcolumn>
                                     <wm-gridcolumn columnwidth="4" name="gridcolumn90">
-                                        <wm-form-field name="vendor" displayname="Vendor" show="true" primary-key="false" generator="assigned" key="vendor" type="list" is-related="true" widget="select" placeholder="Select value" orderby="companyName:asc"
-                                        displayexpression="companyName"></wm-form-field>
+                                        <wm-form-field name="vendor" displayname="Vendor" required="false" show="true" generator="assigned" primary-key="false" key="vendor" type="list" is-related="true" pc-display="true" mobile-display="true" widget="select"></wm-form-field>
                                     </wm-gridcolumn>
                                 </wm-gridrow>
                             </wm-layoutgrid>
-                            <wm-form-action key="save" display-name="Save" show="true" class="form-save btn-primary" iconclass="wi wi-save" title="Save" disabled="false" type="submit" update-mode="true"></wm-form-action>
-                            <wm-form-action key="cancel" display-name="Cancel" show="true" class="form-cancel btn-secondary" iconclass="wi wi-cancel" title="Cancel" action="cancel()" disabled="false" type="button" update-mode="true"></wm-form-action>
+                            <wm-form-action key="cancel" class="form-cancel btn-secondary" iconclass="wi wi-cancel" action="cancel()" display-name="Cancel" show="true" type="button" update-mode="true"></wm-form-action>
+                            <wm-form-action key="save" class="form-save btn-success" iconclass="wi wi-save" display-name="Save" show="true" type="submit" update-mode="true"></wm-form-action>
                         </wm-liveform>
                     </wm-livegrid>
                 </wm-tabpane>
