--- a/src/main/webapp/pages/ManageMunicipalityVendors/ManageMunicipalityVendors.html
+++ b/src/main/webapp/pages/ManageMunicipalityVendors/ManageMunicipalityVendors.html
@@ -28,26 +28,30 @@
                         <wm-panel iconclass="wi wi-work" autoclose="outsideClick" name="panel1" title="Pending Review" class="panel-primary">
                             <wm-livegrid formlayout="dialog" name="livegrid2">
                                 <wm-grid gridfirstrowselect="true" editmode="dialog" title="" dataset="bind:Variables.ReviewVendorApprovals.dataSet" navigation="Classic" name="gridPending" filtermode="multicolumn" exportformat="EXCEL">
-                                    <wm-grid-column binding="municipalities.municipalityName" caption="Municipality" type="string" generator="assigned" show="true" related-entity-name="Municipalities" readonly="false"></wm-grid-column>
+                                    <wm-grid-column binding="approvalStatus" caption="Approval Status" type="string" primary-key="false" generator="assigned" show="true" readonly="false"></wm-grid-column>
+                                    <wm-grid-column binding="active" caption="Active" type="boolean" primary-key="false" generator="assigned" show="true" readonly="false"></wm-grid-column>
                                     <wm-grid-column binding="vendor.companyName" caption="Company" type="string" generator="assigned" show="true" related-entity-name="Vendor" readonly="false"></wm-grid-column>
-                                    <wm-grid-column binding="vendor.companyEmail" caption="Company Email" type="string" generator="assigned" show="true" related-entity-name="Vendor" readonly="false"></wm-grid-column>
-                                    <wm-grid-column binding="vendor.companyWebsite" caption="Company Website" type="string" primary-key="false" generator="assigned" readonly="true" show="true" related-entity-name="Vendor"></wm-grid-column>
+                                    <wm-grid-column binding="dateApproved" caption="Date Approved" type="date" primary-key="false" generator="assigned" show="true" readonly="false"></wm-grid-column>
+                                    <wm-grid-column binding="approvedBy" caption="Approved By" type="string" primary-key="false" generator="assigned" show="true" readonly="false"></wm-grid-column>
+                                    <wm-grid-column binding="reviewer" caption="Reviewer" type="string" primary-key="false" generator="assigned" show="true" readonly="false"></wm-grid-column>
+                                    <wm-grid-column binding="expiresDate" caption="Expires Date" type="date" primary-key="false" generator="assigned" show="true" readonly="false"></wm-grid-column>
                                     <wm-grid-column binding="rowOperations" caption="Actions" type="custom" width="230px" readonly="true" sortable="false" searchable="false" show="true"></wm-grid-column>
                                     <wm-grid-row-action key="updaterow" display-name="" show="true" class="btn-transparent" iconclass="wi wi-mode-edit" title="Review" action="editRow()" disabled="false"></wm-grid-row-action>
                                     <wm-grid-row-action key="customRow" display-name="" show="true" class="btn-transparent" iconclass="wi wi-perm-contact-calendar" title="View Profile" action="customRowAction($event)" disabled="false"></wm-grid-row-action>
+                                    <wm-grid-row-action key="deleterow" display-name="" show="true" class="btn-transparent" iconclass="wi wi-trash" title="Delete" action="deleteRow()" disabled="false"></wm-grid-row-action>
                                 </wm-grid>
-                                <wm-liveform novalidate="false" errormessage="" title="Vendor Review" formlayout="dialog" iconclass="wi wi-edit" dataset="bind:Variables.ReviewVendorApprovals.dataSet" captionalign="left" captionposition="top" name="liveform2">
+                                <wm-liveform novalidate="false" errormessage="" title="Vendor Review" formlayout="dialog" iconclass="wi wi-mode-edit" dataset="bind:Variables.ReviewVendorApprovals.dataSet" captionalign="left" captionposition="top" name="liveform2">
                                     <wm-layoutgrid columns="3" name="layoutgrid3">
                                         <wm-gridrow name="gridrow9">
                                             <wm-gridcolumn columnwidth="4" name="gridcolumn18_1">
                                                 <wm-form-field name="approvalStatus" displayname="Approval Status" show="true" primary-key="false" generator="assigned" key="approvalStatus" type="string" widget="select" maxchars="255" placeholder="" dataset="Pending,Approved,Suspended"
-                                                defaultvalue="Pending"></wm-form-field>
+                                                defaultvalue="Pending" required="true"></wm-form-field>
                                             </wm-gridcolumn>
                                         </wm-gridrow>
                                         <wm-gridrow name="gridrow8">
                                             <wm-gridcolumn columnwidth="4" name="gridcolumn15">
                                                 <wm-form-field name="expiresDate" displayname="Expiration Date" show="true" primary-key="false" generator="assigned" key="expiresDate" type="date" widget="date" placeholder="Select date" outputformat="yyyy-MM-dd"
-                                                datepattern="MM-dd-yyyy" mindate="bind:toDay | toDate: 'yyyy-MM-dd'"></wm-form-field>
+                                                datepattern="MM-dd-yyyy" mindate="bind:toDay | toDate: 'yyyy-MM-dd'" required="true"></wm-form-field>
                                             </wm-gridcolumn>
                                         </wm-gridrow>
                                     </wm-layoutgrid>
@@ -75,24 +79,24 @@
                         <wm-panel iconclass="wi wi-work" autoclose="outsideClick" name="panel2" title="Approved Vendors" class="panel-primary">
                             <wm-livegrid formlayout="dialog" name="livegrid2_1">
                                 <wm-grid gridfirstrowselect="true" editmode="dialog" title="" dataset="bind:Variables.ApprovedVendorApprovals.dataSet" navigation="Classic" name="gridApprovedVendors" filtermode="multicolumn" exportformat="EXCEL">
+                                    <wm-grid-column binding="approvalStatus" caption="Approval Status" type="string" primary-key="false" generator="assigned" show="true" readonly="false"></wm-grid-column>
+                                    <wm-grid-column binding="active" caption="Active" type="boolean" primary-key="false" generator="assigned" show="true" readonly="false"></wm-grid-column>
                                     <wm-grid-column binding="vendor.companyName" caption="Company" type="string" generator="assigned" show="true" related-entity-name="Vendor" readonly="false"></wm-grid-column>
-                                    <wm-grid-column binding="vendor.companyEmail" caption="Company Email" type="string" generator="assigned" show="true" related-entity-name="Vendor" readonly="false"></wm-grid-column>
-                                    <wm-grid-column binding="vendor.companyWebsite" caption="Company Website" type="string" primary-key="false" generator="assigned" readonly="true" show="true" related-entity-name="Vendor"></wm-grid-column>
                                     <wm-grid-column binding="dateApproved" caption="Date Approved" type="date" generator="assigned" datepattern="MM-dd-yyyy" formatpattern="toDate" show="true" readonly="false"></wm-grid-column>
                                     <wm-grid-column binding="approvedBy" caption="Approved By" type="string" generator="assigned" show="true" readonly="false"></wm-grid-column>
-                                    <wm-grid-column binding="expiresDate" caption="Expiration Date" type="date" primary-key="false" generator="assigned" datepattern="MM-dd-yyyy" formatpattern="toDate" show="true" readonly="false"></wm-grid-column>
+                                    <wm-grid-column binding="reviewer" caption="Reviewer" type="string" primary-key="false" generator="assigned" show="true" readonly="false"></wm-grid-column>
+                                    <wm-grid-column binding="expiresDate" caption="Expires Date" type="date" primary-key="false" generator="assigned" datepattern="MM-dd-yyyy" formatpattern="toDate" show="true" readonly="false"></wm-grid-column>
                                     <wm-grid-column binding="rowOperations" caption="Actions" type="custom" width="120px" readonly="true" sortable="false" searchable="false" show="true"></wm-grid-column>
-                                    <wm-grid-row-action key="updaterow" display-name="" show="true" class="btn-transparent" iconclass="wi wi-pencil" title="Edit" action="editRow()" disabled="false"></wm-grid-row-action>
-                                    <wm-grid-row-action key="deleterow" display-name="" show="true" class="btn-transparent" iconclass="wi wi-trash" title="Delete" action="deleteRow()" disabled="false"></wm-grid-row-action>
+                                    <wm-grid-row-action key="updaterow" display-name="" show="true" class="btn-transparent" iconclass="wi wi-mode-edit" title="Edit" action="editRow()" disabled="false"></wm-grid-row-action>
                                     <wm-grid-row-action key="customRow" display-name="" show="true" class="btn-transparent" iconclass="wi wi-perm-contact-calendar" title="View Profile" action="customRowAction($event)" disabled="false"></wm-grid-row-action>
+                                    <wm-grid-row-action key="deleterow" display-name="" show="true" class="btn-transparent" iconclass="wi wi-trash" title="Delete" action="deleteRow()" disabled="false"></wm-grid-row-action>
                                 </wm-grid>
-                                <wm-liveform novalidate="false" errormessage="" title="Vendorapprovals Info" formlayout="dialog" iconclass="wi wi-edit" dataset="bind:Variables.ApprovedVendorApprovals.dataSet" captionalign="left" captionposition="top"
-                                name="liveformApprovedVendors">
+                                <wm-liveform novalidate="false" errormessage="" title="Vendor Review" formlayout="dialog" iconclass="wi wi-mode-edit" dataset="bind:Variables.ApprovedVendorApprovals.dataSet" captionalign="left" captionposition="top" name="liveformApprovedVendors">
                                     <wm-layoutgrid columns="1" name="layoutgrid3_1">
                                         <wm-gridrow name="gridrow7">
                                             <wm-gridcolumn columnwidth="12" name="gridcolumn10">
-                                                <wm-form-field name="approvalStatus2" displayname="Approval Status" show="true" primary-key="false" generator="assigned" key="approvalStatus" type="string" widget="select" maxchars="255" placeholder="Enter value"
-                                                dataset="Pending,Approved,Suspended" datafield="approvalStatus" displayfield="approvalStatus" defaultvalue="Approved"></wm-form-field>
+                                                <wm-form-field name="approvalStatus2" displayname="Approval Status" show="true" primary-key="false" generator="assigned" key="approvalStatus" type="string" widget="select" maxchars="255" placeholder="" dataset="Pending,Approved,Suspended"
+                                                datafield="approvalStatus" displayfield="approvalStatus" defaultvalue="Approved" required="true"></wm-form-field>
                                             </wm-gridcolumn>
                                         </wm-gridrow>
                                         <wm-gridrow name="gridrow8_1">
@@ -129,23 +133,24 @@
                         <wm-panel iconclass="wi wi-work" autoclose="outsideClick" name="panel3" title="Suspended Vendors" class="panel-primary">
                             <wm-livegrid formlayout="dialog" name="livegrid3">
                                 <wm-grid gridfirstrowselect="true" editmode="dialog" title="" dataset="bind:Variables.SuspendedVendorApprovals.dataSet" navigation="Classic" name="gridSuspended" filtermode="multicolumn" exportformat="EXCEL">
+                                    <wm-grid-column binding="approvalStatus" caption="Approval Status" type="string" primary-key="false" generator="assigned" show="true" readonly="false"></wm-grid-column>
+                                    <wm-grid-column binding="active" caption="Active" type="boolean" primary-key="false" generator="assigned" show="true" readonly="false"></wm-grid-column>
                                     <wm-grid-column binding="vendor.companyName" caption="Company" type="string" generator="assigned" show="true" related-entity-name="Vendor" readonly="false"></wm-grid-column>
-                                    <wm-grid-column binding="vendor.companyEmail" caption="Company Email" type="string" generator="assigned" show="true" related-entity-name="Vendor" readonly="false"></wm-grid-column>
-                                    <wm-grid-column binding="vendor.companyWebsite" caption="Company Website" type="string" primary-key="false" generator="assigned" readonly="true" show="true" related-entity-name="Vendor"></wm-grid-column>
-                                    <wm-grid-column binding="dateApproved" caption="Date Suspended" type="date" generator="assigned" datepattern="MM-dd-yyyy" formatpattern="toDate" show="true" readonly="false"></wm-grid-column>
-                                    <wm-grid-column binding="approvedBy" caption="Suspended By" type="string" generator="assigned" show="true" readonly="false"></wm-grid-column>
-                                    <wm-grid-column binding="expiresDate" caption="Expiration Date" type="date" primary-key="false" generator="assigned" datepattern="MM-dd-yyyy" formatpattern="toDate" show="true" readonly="false"></wm-grid-column>
+                                    <wm-grid-column binding="dateApproved" caption="Date Approved" type="date" generator="assigned" datepattern="MM-dd-yyyy" formatpattern="toDate" show="true" readonly="false"></wm-grid-column>
+                                    <wm-grid-column binding="approvedBy" caption="Approved By" type="string" generator="assigned" show="true" readonly="false"></wm-grid-column>
+                                    <wm-grid-column binding="reviewer" caption="Reviewer" type="string" primary-key="false" generator="assigned" show="true" readonly="false"></wm-grid-column>
+                                    <wm-grid-column binding="expiresDate" caption="Expires Date" type="date" primary-key="false" generator="assigned" datepattern="MM-dd-yyyy" formatpattern="toDate" show="true" readonly="false"></wm-grid-column>
                                     <wm-grid-column binding="rowOperations" caption="Actions" type="custom" width="120px" readonly="true" sortable="false" searchable="false" show="true"></wm-grid-column>
-                                    <wm-grid-row-action key="updaterow" display-name="" show="true" class="btn-transparent" iconclass="wi wi-pencil" title="Edit" action="editRow()" disabled="false"></wm-grid-row-action>
+                                    <wm-grid-row-action key="updaterow" display-name="" show="true" class="btn-transparent" iconclass="wi wi-mode-edit" title="Edit" action="editRow()" disabled="false"></wm-grid-row-action>
                                     <wm-grid-row-action key="customRow" display-name="" show="true" class="btn-transparent" iconclass="wi wi-perm-contact-calendar" title="View Profile" action="customRowAction($event)" disabled="false"></wm-grid-row-action>
+                                    <wm-grid-row-action key="deleterow" display-name="" show="true" class="btn-transparent" iconclass="wi wi-trash" title="Delete" action="deleteRow()" disabled="false"></wm-grid-row-action>
                                 </wm-grid>
-                                <wm-liveform novalidate="false" errormessage="" title="Vendorapprovals Info" formlayout="dialog" iconclass="wi wi-edit" dataset="bind:Variables.SuspendedVendorApprovals.dataSet" captionalign="left" captionposition="top"
-                                name="liveformSuspended">
+                                <wm-liveform novalidate="false" errormessage="" title="Vendor Review" formlayout="dialog" iconclass="wi wi-mode-edit" dataset="bind:Variables.SuspendedVendorApprovals.dataSet" captionalign="left" captionposition="top" name="liveformSuspended">
                                     <wm-layoutgrid columns="1" name="layoutgrid4">
                                         <wm-gridrow name="gridrow10">
                                             <wm-gridcolumn columnwidth="12" name="gridcolumn13">
-                                                <wm-form-field name="approvalStatus3" displayname="Approval Status" show="true" primary-key="false" generator="assigned" key="approvalStatus" type="string" widget="select" maxchars="255" placeholder="Enter value"
-                                                dataset="Pending,Approved,Suspended" datafield="approvalStatus" displayfield="approvalStatus" defaultvalue="Suspended"></wm-form-field>
+                                                <wm-form-field name="approvalStatus3" displayname="Approval Status" show="true" primary-key="false" generator="assigned" key="approvalStatus" type="string" widget="select" maxchars="255" placeholder="" dataset="Pending,Approved,Suspended"
+                                                datafield="approvalStatus" displayfield="approvalStatus" defaultvalue="Suspended" required="true"></wm-form-field>
                                             </wm-gridcolumn>
                                         </wm-gridrow>
                                     </wm-layoutgrid>
